[package]
name = "wasm-mandelbrot"
version = "0.1.2"
authors = ["Chris Snape-Jenkinson"]
edition = "2021"
license = "MIT OR APACHE-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features=["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "Window"] }

[profile.release]
lto = true
opt-level = 's'
